--- a/src/boardwindow_gui.ui
+++ b/src/boardwindow_gui.ui
@@ -2620,6 +2620,8 @@ After placing and/or undo release button for returning to starting point automat
     <addaction name="anDisconnect"/>
     <addaction name="anPause"/>
     <addaction name="separator"/>
+    <addaction name="anPlay"/>
+    <addaction name="separator"/>
     <addaction name="anBatch"/>
    </widget>
    <widget class="QMenu" name="helpMenu">
@@ -3888,6 +3890,14 @@ Open the batch analysis dialog which allows you to add SGF files to a queue to b
    </property>
    <property name="toolTip">
     <string>Open the slide export dialog</string>
+   </property>
+  </action>
+  <action name="anPlay">
+   <property name="text">
+    <string>Play against engine from current position...</string>
+   </property>
+   <property name="toolTip">
+    <string>Start a game against an engine from the current position</string>
    </property>
   </action>
  </widget>
