Implement two-engine play
TwoAIGameDlg is a new variant of NewAIGameDlg, and MainWindow_GTP gets new
functionality.  GTP_Process can now query final_score.

--- a/src/boardwindow_gui.ui
+++ b/src/boardwindow_gui.ui
@@ -1636,6 +1636,13 @@ The update button refreshes the game in this window, adding any moves that were 
                   </widget>
                  </item>
                  <item>
+                  <widget class="QPushButton" name="followButton">
+                   <property name="text">
+                    <string>Follow</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
                   <widget class="QPushButton" name="passButton">
                    <property name="focusPolicy">
                     <enum>Qt::NoFocus</enum>
