Various fixes for the sound preferences
Identify buttons by comparing pointers, not translated text.  Make sure the
sound is always played when one of them is clicked by adding force parameters.
Fix naming of the button for played stone sounds (apparently I tried to rename
the "Stones" tab to "Graphics" at some point and replaced the wrong string).
Remove unused playClick.

--- a/src/preferences_gui.ui
+++ b/src/preferences_gui.ui
@@ -652,7 +652,7 @@ Select the font for the server console (fixed font preferably).</string>
 Enable this box when you want to listen a clicking sound when playing a stone on the board.</string>
             </property>
             <property name="text">
-             <string>Graphics</string>
+             <string>Stone played</string>
             </property>
             <attribute name="buttonGroup">
              <string notr="true">soundButtonGroup</string>
