--- a/src/newaigamedlg_gui.ui
+++ b/src/newaigamedlg_gui.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>416</width>
+    <width>517</width>
     <height>503</height>
    </rect>
   </property>
@@ -111,8 +111,42 @@
      <property name="title">
       <string>Game parameters</string>
      </property>
-     <layout class="QFormLayout" name="formLayout_2">
-      <item row="0" column="0">
+     <layout class="QGridLayout" name="gridLayout_4">
+      <item row="0" column="0" colspan="4">
+       <widget class="QComboBox" name="boardTypeComboBox">
+        <item>
+         <property name="text">
+          <string>Square board size</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Rectangular board</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="1" column="2">
+       <widget class="QLabel" name="label_6">
+        <property name="text">
+         <string>x</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QSpinBox" name="handicapSpinBox">
+        <property name="maximumSize">
+         <size>
+          <width>60</width>
+          <height>32767</height>
+         </size>
+        </property>
+        <property name="maximum">
+         <number>13</number>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
        <widget class="QLabel" name="TextLabel3">
         <property name="text">
          <string>Board size:</string>
@@ -122,7 +156,17 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
+      <item row="2" column="0">
+       <widget class="QLabel" name="TextLabel4">
+        <property name="text">
+         <string>Komi:</string>
+        </property>
+        <property name="wordWrap">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
        <widget class="QSpinBox" name="boardsizeSpinBox">
         <property name="maximumSize">
          <size>
@@ -141,17 +185,17 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="TextLabel4">
+      <item row="3" column="0">
+       <widget class="QLabel" name="TextLabel5">
         <property name="text">
-         <string>Komi:</string>
+         <string>Handicap:</string>
         </property>
         <property name="wordWrap">
          <bool>false</bool>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="2" column="1">
        <widget class="KomiSpinBox" name="komiSpin">
         <property name="maximumSize">
          <size>
@@ -170,26 +214,22 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="TextLabel5">
-        <property name="text">
-         <string>Handicap:</string>
-        </property>
-        <property name="wordWrap">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QSpinBox" name="handicapSpinBox">
+      <item row="1" column="3">
+       <widget class="QSpinBox" name="boardsizeYSpinBox">
         <property name="maximumSize">
          <size>
           <width>60</width>
           <height>32767</height>
          </size>
         </property>
+        <property name="minimum">
+         <number>4</number>
+        </property>
         <property name="maximum">
-         <number>13</number>
+         <number>36</number>
+        </property>
+        <property name="value">
+         <number>19</number>
         </property>
        </widget>
       </item>
@@ -379,7 +419,21 @@
   </customwidget>
  </customwidgets>
  <tabstops>
+  <tabstop>humanPlayerLineEdit</tabstop>
+  <tabstop>engineComboBox</tabstop>
+  <tabstop>engineColorButton</tabstop>
+  <tabstop>boardTypeComboBox</tabstop>
+  <tabstop>boardsizeSpinBox</tabstop>
+  <tabstop>boardsizeYSpinBox</tabstop>
+  <tabstop>komiSpin</tabstop>
+  <tabstop>handicapSpinBox</tabstop>
+  <tabstop>timeBox</tabstop>
+  <tabstop>mainTimeEdit</tabstop>
+  <tabstop>overtimeGroupBox</tabstop>
+  <tabstop>overPeriodEdit</tabstop>
+  <tabstop>overStonesSpinBox</tabstop>
   <tabstop>gameToLoad</tabstop>
+  <tabstop>filePathButton</tabstop>
  </tabstops>
  <includes>
   <include location="local">komispinbox.h</include>
