--- a/src/twoaigamedlg_gui.ui
+++ b/src/twoaigamedlg_gui.ui
@@ -28,8 +28,8 @@
   <property name="modal">
    <bool>false</bool>
   </property>
-  <layout class="QGridLayout">
-   <item row="12" column="0" colspan="3">
+  <layout class="QGridLayout" name="gridLayout_7">
+   <item row="4" column="0" colspan="3">
     <layout class="QHBoxLayout">
      <property name="spacing">
       <number>6</number>
@@ -71,7 +71,7 @@
      </item>
     </layout>
    </item>
-   <item row="10" column="0" colspan="3">
+   <item row="2" column="0" colspan="3">
     <widget class="QGroupBox" name="loadBox">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -191,7 +191,7 @@ and play the selected number of games per line</string>
      </layout>
     </widget>
    </item>
-   <item row="3" column="0">
+   <item row="1" column="0">
     <widget class="QGroupBox" name="gameParamsBox">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -203,8 +203,54 @@ and play the selected number of games per line</string>
       <string>Game parameters</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_4">
-      <item row="0" column="1">
+      <item row="1" column="2">
+       <widget class="QLabel" name="label_7">
+        <property name="text">
+         <string>x</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="QSpinBox" name="handicapSpinBox">
+        <property name="maximumSize">
+         <size>
+          <width>60</width>
+          <height>32767</height>
+         </size>
+        </property>
+        <property name="maximum">
+         <number>13</number>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="TextLabel3">
+        <property name="text">
+         <string>Board size:</string>
+        </property>
+        <property name="wordWrap">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="TextLabel4">
+        <property name="text">
+         <string>Komi:</string>
+        </property>
+        <property name="wordWrap">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
        <widget class="QSpinBox" name="boardsizeSpinBox">
+        <property name="maximumSize">
+         <size>
+          <width>60</width>
+          <height>32767</height>
+         </size>
+        </property>
         <property name="minimum">
          <number>4</number>
         </property>
@@ -216,8 +262,24 @@ and play the selected number of games per line</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="3" column="0">
+       <widget class="QLabel" name="TextLabel5">
+        <property name="text">
+         <string>Handicap:</string>
+        </property>
+        <property name="wordWrap">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
        <widget class="KomiSpinBox" name="komiSpin">
+        <property name="maximumSize">
+         <size>
+          <width>60</width>
+          <height>32767</height>
+         </size>
+        </property>
         <property name="focusPolicy">
          <enum>Qt::StrongFocus</enum>
         </property>
@@ -229,60 +291,43 @@ and play the selected number of games per line</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="TextLabel4">
-        <property name="text">
-         <string>Komi:</string>
-        </property>
-        <property name="wordWrap">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="TextLabel5">
-        <property name="text">
-         <string>Handicap:</string>
-        </property>
-        <property name="wordWrap">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="TextLabel3">
-        <property name="text">
-         <string>Board size:</string>
-        </property>
-        <property name="wordWrap">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QSpinBox" name="handicapSpinBox">
-        <property name="maximum">
-         <number>13</number>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0">
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
+      <item row="1" column="3">
+       <widget class="QSpinBox" name="boardsizeYSpinBox">
+        <property name="maximumSize">
          <size>
-          <width>20</width>
-          <height>1</height>
+          <width>60</width>
+          <height>32767</height>
          </size>
         </property>
-       </spacer>
+        <property name="minimum">
+         <number>4</number>
+        </property>
+        <property name="maximum">
+         <number>36</number>
+        </property>
+        <property name="value">
+         <number>19</number>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0" colspan="4">
+       <widget class="QComboBox" name="boardTypeComboBox">
+        <item>
+         <property name="text">
+          <string>Square board size</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Rectangular board</string>
+         </property>
+        </item>
+       </widget>
       </item>
      </layout>
     </widget>
    </item>
-   <item row="3" column="2">
+   <item row="1" column="2">
     <widget class="QGroupBox" name="timeBox">
      <property name="title">
       <string>Time</string>
@@ -432,7 +477,7 @@ and play the selected number of games per line</string>
      </layout>
     </widget>
    </item>
-   <item row="11" column="0" colspan="3">
+   <item row="3" column="1" colspan="2">
     <spacer name="spacer3">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -461,7 +506,9 @@ and play the selected number of games per line</string>
  <tabstops>
   <tabstop>engineWComboBox</tabstop>
   <tabstop>engineBComboBox</tabstop>
+  <tabstop>boardTypeComboBox</tabstop>
   <tabstop>boardsizeSpinBox</tabstop>
+  <tabstop>boardsizeYSpinBox</tabstop>
   <tabstop>komiSpin</tabstop>
   <tabstop>handicapSpinBox</tabstop>
   <tabstop>overPeriodEdit</tabstop>
