--- a/src/preferences_gui.ui
+++ b/src/preferences_gui.ui
@@ -4336,6 +4336,16 @@ Note: 'Delete' concerns saved records.</string>
         </widget>
        </item>
        <item row="14" column="0">
+        <widget class="QCheckBox" name="observeSingleCheckBox">
+         <property name="toolTip">
+          <string>&lt;p&gt;Choose whether a new window should be opened for every observed game, or whether they should be grouped in one central observer window.&lt;/p&gt;</string>
+         </property>
+         <property name="text">
+          <string>Observe games in a single window</string>
+         </property>
+        </widget>
+       </item>
+       <item row="15" column="0">
         <spacer name="verticalSpacer_19">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
